public/hexdraw.css
body
{
	font-family: 'Roboto Condensed', sans-serif;
	font-weight: 400;
	background-color:rgba(0, 0, 0, 1);
}
html
{
	font-family: 'Roboto Condensed', sans-serif;
	font-weight: 400;
	background-color:rgba(0, 0, 0, 1);
}
a
{
	color:rgba(200,200,200,1);
}
a:hover {
	color:rgba(150,150,150,1);
    text-decoration:none;
}
a:active {
    text-decoration:none;
}
.intro
{
	overflow:hidden;

}
#x-canvas
{
	position:absolute;
	top:50%;
	left:50%;
	transform: translate(-50%, -50%);
	-webkit-transform: translate(-50%, -50%);
	z-index:1;
}
#x-canvas-bg
{
	position:absolute;
	top:50%;
	left:50%;
	transform: translate(-50%, -50%);
	-webkit-transform: translate(-50%, -50%);
	z-index:0;
}
.nav-container
{
	height:100%;
	color:rgba(240,240,240,1);
	position:relative;
}
.logo
{
	position:fixed;
	text-transform:uppercase;
}
.smalllogo
{
	width:100%;
	top:0;
	padding-left:20px;
	padding-right:20px;
	font-size:2em;
	position:fixed;
	text-transform:lowercase;
	background-color:rgba(0,0,0,1);
	z-index:10;
	-webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
.color-picker
{
	width:86px;
	height:auto;
	top:120px;
	padding:10px;
	font-size:2em;
	position:absolute;
	display:block;
	text-transform:lowercase;
	background-color:rgba(0,0,0,0.6);
	z-index:10;
}
.color-picker-mobile
{
	width:100%;
	bottom:0px;
	padding-left:20px;
	padding-right:20px;
	padding-top:10px;
	padding-bottom:10px;
	font-size:2em;
	position:fixed;
	display:inline-block;
	text-transform:lowercase;
	background-color:rgba(0,0,0,0.6);
	z-index:10;
}
.color-red
{
	background-color:#990000;
}
.color-blue
{
	background-color:#000099;
}
.color-purple
{
	background-color:rgb(122, 82, 204);
}
.color-item
{
	display:block;
	float:left;
	background-size:contain;
	border-style:solid;
	border-width:5px;
	border-color:rgba(0,0,0,0);
	margin-top:4px;
	margin-bottom:4px;
	width:60px;
	height:60px;
	z-index:10;
}
.color-item.mobile{
	width:40px;
	height:40px;
	margin-left:4px;
	margin-right:4px;
}

.utility-item
{
	display:inline;
	text-align:center;
	line-height:50px;
	float:right;
	background-size:contain;
	border-style:solid;
	border-width:5px;
	border-color:rgba(0,0,0,0);
	
	color: rgba(255,255,255,1);
	margin-top:4px;
	margin-bottom:4px;
	width:60px;
	height:60px;
	z-index:10;
}

.utility-item.mobile{
	font-size: 1em;
	line-height:30px;
	width:40px;
	height:40px;
	margin-left:4px;
	margin-right:4px;
}
.utility-item:hover
{
	border-color: rgba(255,255,255,0.3);
}

.color-item:hover
{
	border-color: rgba(255,255,255,0.3);
}
.color-item.active
{
	border-color: rgba(255,255,255,1);
}
.biglogo
{
	width:200px;
	top:20px;
	padding-left:20px;
	padding-right:20px;
	font-size:2em;
	position:fixed;
	text-transform:lowercase;
	background-color:rgba(0,0,0,0.6);
	-webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
	z-index:10;
}
.logo-text-front
{
	color:rgba(240,240,240,1);
	text-align:justify;
}
hr.logo-line
{
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 0.1em 0;
    padding: 0;
}
.logo-text-back
{
	color:rgba(160,160,160,1);
	text-align:justify;
}
.nav
{
	/*font-family: 'Oxygen Mono';*/
	text-transform: lowercase;
	font-size: 1.5em;
	color:rgba(240,240,240,1);
	padding-top:40px;
}
.nav > li > a:hover
{
	background-color:rgba(0,0,0,1);
}
.nav > li > a:focus
{
	background-color:rgba(0,0,0,1);
}
.nav > li > a
{
	color:rgba(240,240,240,1);
}

.content-frame
{
	min-height:100vh;
	color:rgba(240,240,240,1);
}
section
{
	overflow:auto;
	position:relative;
	min-height:100vh;
}
.content-header
{
	text-transform: lowercase;
	font-size:2em;
	color:#888888;
}
.content
{
	padding-top:40px;
	font-size:1.5em;
}
.resume-section
{
	padding:20px;
}
.resume-heading
{
	font-weight:700;
	padding-left:0;
}
ul
{
list-style-type: none;
}
.project-card
{
	background-color:#222222;
	position:relative;
	width:100%;
	height:150px;
	margin-bottom:20px;
}
.project-title
{
	position:absolute;
	left:20px;
	top:20px;
	font-size:2em;
}
.project-x
{
	position:absolute;
	background-size:contain;
	display:block;
	height:60px;
	width:60px;
	background-image:url('x_nav.png');
}
.project-hex
{
	position:absolute;
	background-size:contain;
	display:block;
	height:60px;
	width:60px;
	background-image:url('hex_nav.png');
}
.project-url
{
	position:absolute;
	left:20px;
	bottom:20px;
}
.project-description
{
	position:absolute;
	font-size:1.5em;
	text-align:right;
	right:20px;
	top:20px;
}
.project-tools
{
	position:absolute;
	text-align:right;
	right:20px;
	bottom:20px;
}
.username
{
	color:rgba(80,80,80,1);
}

@media (max-width: 992px)
{ 
	.project-description
	{
	position:absolute;
	font-size:1em;
	text-align:right;
	right:20px;
	top:auto;
	bottom:20px;
	}
}

